New table design
New table design

--- a/app/views/enquiries/_todo.html.erb
+++ b/app/views/enquiries/_todo.html.erb
@@ -4,9 +4,9 @@
 </script>
 
 <% if @list.to_i == 1 && @enquiry.todos.size > 0 %>
-<table class="tb-stylev prlayout" border="0" cellpadding="0" cellspacing="0" width="100%">
+<table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
      <thead>
-      <tr class="theme-l">
+      <tr>
                             <th>Topic</th>
                             <th>Description</th>
                             <th>Status</th>
