--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -143,6 +143,13 @@ input[type=radio]{padding-right:5px}
 .tb-stylev tr th:last-child,.tb-stylev tr td:last-child{border-right:0}
 .tb-stylev  .active-rows td{color:#000000 !important}
 
+.tables2{padding:0;margin:0;border:1px solid #DDD;}
+.tables2 tr th{background:#EDF2F6;border-bottom:1px dashed #DDD;padding:5px 0 5px 5px;font-size:12px;color:#5E6E7F;cursor:pointer;font-weight:normal;text-align:left}
+.tables2 tr th a,.tables2 tr th a:hover,.tables2 tr th a:active,.tables2 tr th a:link{font-size:12px;color:#5E6E7F;text-decoration:none;cursor:pointer}
+.tables2 tr td{background:#fff;border-bottom:1px dashed #DDD;padding:5px 0 5px 5px;font-size:12px;color:#505050;cursor:pointer;font-weight:normal}
+.tables2 tr:hover td{background:#FAFAFA;color:#000000}
+.tables2 tr td a,.tables2 tr td a:hover,.tables2 tr td a:active,.tables2 tr td a:link{font-size:12px;color:#0F5491;cursor:pointer}
+.tables2 tr:last-child td{border-bottom:0}
 /* TABLE - ENDS */
 
 .sp{color:#FD9B00}
