--- a/app/views/enquiries/_follow_up.html.erb
+++ b/app/views/enquiries/_follow_up.html.erb
@@ -1,8 +1,8 @@
 
 <% if @list.to_i == 1 && @enquiry.follow_ups.size > 0 %>
-<table class="tb-stylev prlayout" border="0" cellpadding="0" cellspacing="0" width="100%">
+<table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
      <thead>
-      <tr class="theme-l">
+      <tr>
                             <th>Title</th>
                             <th>Description</th>
                             <th>Starts At</th>
