--- a/app/views/enquiries/_note.html.erb
+++ b/app/views/enquiries/_note.html.erb
@@ -1,7 +1,7 @@
 <% if @list.to_i == 1 && @enquiry.notes.size > 0 %>
-<table class="tb-stylev prlayout" border="0" cellpadding="0" cellspacing="0" width="100%">
+<table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
      <thead>
-      <tr class="theme-l">
+      <tr>
                             <th>Note</th>
       </tr>
     </thead>
