--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -168,8 +168,9 @@
  
 </div>
 <!-- BODY - ENDS -->
+</div>
 <!-- FOOTER - STARTS -->
-<div id="footer">
+<div id="footerin">
 <center>Copyright 2012 Organizor | All rights reserved</center>
 </div>
 <!-- FOOTER - ENDS --> 
