Timeline style fix
Timeline style fix

--- a/app/views/enquiries/_show.html.erb
+++ b/app/views/enquiries/_show.html.erb
@@ -107,10 +107,16 @@
                 </div>
             </div>
         </div>
-        <ul class="vlsd">
-            <li><h5><b>Timeline</b></h5></li>
+		
+		<br/><div class="htab">
+		<h5><b>Timeline</b></h5>
+		</div><br/>
+		<div id="scrollboxu"  style="height:440px">	
+        <ul class="vlsdn">
             <%= render 'timeline' %>
         </ul>
+		</div><br/><br/>
+		
         <div id="enquiry_id_div" data-enquiry_id='<%= a.id %>'>
         </div>
         <div class="boxs">
