--- a/app/views/enquiries/_follow_up.html.erb
+++ b/app/views/enquiries/_follow_up.html.erb
@@ -38,11 +38,12 @@
                         <%= fbox(g,"title","text_field") %>
                         <%= go_create(g,"event_type","event_type_id","name",1) %> 
                         <%= fbox(g,[:desc,:size => "2x2"],"text_area",nil,"Description") %>
-						<span onclick="div_toggle(this,'#more_fields')">more fields</span>
+						<br/>
+						<span onclick="div_toggle(this,'#more_fields')" class="btns">more fields</span>
 						<div class="cl"></div>
 						<div class="cols" id="more_fields" style="display:none;">
-						  <%= fbox(g,[:ends_at,:class => "dateTimeField"],"text_field",nil) %>
-						  <%= fbox(g,:api,"check_box",nil,"Add to google calendar ?        ") %>
+						  <%= fbox(g,[:ends_at,:class => "dateTimeField caltf"],"text_field",nil) %>
+						  <%= fbox(g,[:api,:class => "mar"],"check_box",nil,"Add to google calendar ?") %>
 						  <%= fbox(g,:remind_before,"text_field") %> minutes
 						  <%= fbox(g,:venue,"text_field") %>
 						</div>
@@ -58,7 +59,7 @@
                     </div>
                     
                 </div>
-
+	<br/>
     <%= g.submit "Create",{:class => "btnp fl"} %>
     <div class="cl"></div>
 <% end %>
