--- a/app/views/enquiries/_email.html.erb
+++ b/app/views/enquiries/_email.html.erb
@@ -79,7 +79,7 @@
     <div class="fbox">
         <label>&nbsp;</label>
         <%= p.submit "Send",class: "btnp" %>
-        <%= link_to("Reset","#",{class: "btnp",id: "email_reset"}) %>
+        <%= link_to("Reset","#",{class: "btns",id: "email_reset"}) %>
     </div>
   <% end %>
 
