--- a/app/views/enquiries/_timeline.html.erb
+++ b/app/views/enquiries/_timeline.html.erb
@@ -2,7 +2,7 @@
 <li>
   <%= image_tag "/images/icons/"+ t.action.to_s + ".png",{class: "fl", width: "35"} %>
   &nbsp;&nbsp;&nbsp;
-  <h4><%= t.comment %></h4>
+  <h4><b><%= t.comment %></b></h4>
   <br/>
   &nbsp;&nbsp;&nbsp;
   <%= t.desc.html_safe %>
