Inquiry menu activate on page load
Inquiry menu activate on page load

--- a/app/views/enquiries/index.html.erb
+++ b/app/views/enquiries/index.html.erb
@@ -3,6 +3,10 @@ $(function(){
   $("ul.tab-menus li.all").trigger('click');
 });
 
+$(document).ready(function(){
+activeMM("inquiresMM");
+});
+
 </script>
 <div class="tab-container">
    <%= render 'tabs' %>  
