--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,8 +101,8 @@ input[type=text],input[type=password]{border-radius:1px;box-shadow: 1px 1px 1px 
 input[type=text]:hover,input[type=text]:visited,
 input[type=password]:hover,input[type=password]:visited{box-shadow: 1px 1px 1px 1px #EFEFEF inset;}
 textarea{width:96%;border-radius:1px;border:1px solid #CACDD2;box-shadow: 1px 1px 5px #CACDD2 inset;padding:3px 5px 2px 10px;font-size:14px}
-.ipt{border-radius:1px;height:24px;padding:3px 5px 2px 10px;width:200px !important;font-size:14px;background:#F0F0F0;border:1px solid #F0F0F0}
-.caltf,.datepicker {background: #fff url(/images/icons/calendar0.png) 98% no-repeat;padding-right:25px !important;cursor:pointer;width:160px !important;}
+.ipt{border-radius:1px;height:24px;padding:3px 5px 2px 10px;width:200px !important;font-size:14px;background:#F0F0F0;border:1px solid #F0F0F0;}
+.caltf,.datepicker {background: #fff url(/images/icons/calendar0.png) 98% no-repeat;padding-right:25px !important;cursor:pointer;width:160px !important;width:145px !important;}
 .dateTimeField{background: #fff url(/images/icons/datetime.png) 98% no-repeat !important;padding-right:25px !important;cursor:pointer;width:160px !important;}
 .ipt:hover,.ipt:visited,.ipt:focus{background:#fff}
 select{border-radius:1px;border:1px solid #C0C0C0;height:23px;width:180px;padding:0 0 0 5px;}
