--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -88,8 +88,7 @@ $(function(){
 		  
 	   <div class="cl"></div><br/>
 		 <span class="btns">
-          <img src="/images/icons/active-delete.png" width="18"/>
-          &nbsp;&nbsp;
+          <span class="remove-icon">x</span>
           <%= p.link_to_remove "Remove" %>
       </span>						
 	  <div class="cl"></div>
