--- a/app/views/enquiries/_show.html.erb
+++ b/app/views/enquiries/_show.html.erb
@@ -1,4 +1,3 @@
-<% a = @enquiry %>
 <div class="tab-content3" id="tab-content62">
 
         <div class="boxp">
@@ -119,7 +118,7 @@
 		
         <div id="enquiry_id_div" data-enquiry_id='<%= a.id %>'>
         </div>
-        <div class="boxs">
+        <div class="boxstheme">
           <%= render "actions" %>
           <!-- Action container -->
           <div id="action_div">
