--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,6 +101,7 @@ small{font-size: 11px;color:#666666;font-weight:normal;}
 input[type=text],input[type=password]{border-radius:1px;box-shadow: 1px 1px 1px #CACDD2 inset;height:18px;padding:3px 5px 2px 10px;width:165px;font-size:14px;border:1px solid #CACDD2;}
 input[type=text]:hover,input[type=text]:visited,
 input[type=password]:hover,input[type=password]:visited{box-shadow: 1px 1px 1px 1px #EFEFEF inset;}
+input[type=text]:focus,input[type=password]:focus,textarea:focus{border-color:#2A88C8;box-shadow:0 0 2px rgba(82, 168, 236, 0.5)}
 textarea{width:96%;border-radius:1px;border:1px solid #CACDD2;box-shadow: 1px 1px 5px #CACDD2 inset;padding:3px 5px 2px 10px;font-size:14px}
 .ipt{border-radius:1px;height:24px;padding:3px 5px 2px 10px;width:200px !important;font-size:14px;background:#F0F0F0;border:1px solid #F0F0F0;}
 .caltf,.datepicker {background: #fff url(/images/icons/calendar1.png) 98% no-repeat;padding-right:25px !important;cursor:pointer;width:145px !important;}
