--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,6 +95,7 @@ small{font-size: 11px;color:#666666;font-weight:normal;}
 .bltab{background:#E8F0FD;padding:5px 10px 5px 10px}
 .plus{background:#F1F0F5;color:#5F5F5F;border:1px solid #B1B1B1;padding:0 6px 0 6px;margin:0 0 0 10px;vertical-align:bottom;border-radius:1000px;font-size:20px;font-weight:bold;color:#B1B1B1;cursor:pointer;box-shadow:0 0 1px #F1F0F5}
 .plus:hover{border-color:#959595;color:#959595;box-shadow:0 0 1px #959595}
+.ms-list{width:180px !important}
 /* TABS - ENDS */
 
 /* INPUT FIELDS - STARTS */
