--- a/app/views/enquiries/_show.html.erb
+++ b/app/views/enquiries/_show.html.erb
@@ -1,5 +1,5 @@
+<% a = @enquiry %>
 <div class="tab-content3" id="tab-content62">
-
         <div class="boxp">
             <div class="htab">
             <h5>
