--- a/app/views/enquiries/_show.html.erb
+++ b/app/views/enquiries/_show.html.erb
@@ -118,6 +118,9 @@
 		
         <div id="enquiry_id_div" data-enquiry_id='<%= a.id %>'>
         </div>
+		<div class="htab">
+		<h5><b>Action</b></h5>
+		</div>
         <div class="boxstheme">
           <%= render "actions" %>
           <!-- Action container -->
