--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -157,7 +157,8 @@ input[type=radio]{padding-right:5px}
 .tables2 tr td{background:#fff;border-bottom:1px dashed #fff;padding:5px 0 5px 5px;font-size:12px;color:#505050;cursor:pointer;font-weight:normal}
 .tables2 tr:hover td{background:#FAFAFA;color:#000000}
 .tables2 tr td a,.tables2 tr td a:hover,.tables2 tr td a:active,.tables2 tr td a:link{font-size:12px;color:#0F5491;cursor:pointer}
-.tables2 tr:last-child td{border-bottom:0}
+.tables2 tr:last-child td{background:#F5F5F5;border-top:1px dashed #F5F5F5;border-bottom:1px solid #E2E2E2;padding:5px 0 5px 5px;font-size:12px;color:#5E6E7F;cursor:pointer;font-weight:normal;text-align:left}
+.tables2 tr:last-child td a{color:#6B84B4}
 /* TABLE - ENDS */
 
 .sp{color:#FD9B00}
