--- a/app/views/enquiries/_follow_up.html.erb
+++ b/app/views/enquiries/_follow_up.html.erb
@@ -22,14 +22,18 @@
                     <td><%= User.find(fu.assigned_by).first_name %></td>
                </tr>
            <% end %>               
-
+				<tr>
+                    <td colspan="6" align="left"><a href="#">Back</a></td>
+               </tr>
     </tbody>
   </table>
 <br/>
 <br/>
-<br/>
 <% end %>
-
+<div class="htab">
+		<h6><b>New Follow up</b></h6>
+</div>
+<br/>
 <div id="followup-action" class="action-box">
 <%= form_for(@follow_up) do |g| %>
   <%= g.hidden_field :enquiry_id, value: id %>
@@ -37,18 +41,6 @@
                     <div class="col6">
                         <%= fbox(g,"title","text_field") %>
                         <%= go_create(g,"event_type","event_type_id","name",1) %> 
-                        <%= fbox(g,[:desc,:size => "2x2"],"text_area",nil,"Description") %>
-						<br/>
-						<span onclick="div_toggle(this,'#more_fields')" class="btns">more fields</span>
-						<div class="cl"></div>
-						<div class="cols" id="more_fields" style="display:none;">
-						  <%= fbox(g,[:ends_at,:class => "dateTimeField caltf"],"text_field",nil) %>
-						  <%= fbox(g,[:api,:class => "mar"],"check_box",nil,"Add to google calendar ?") %>
-						  <%= fbox(g,:remind_before,"text_field") %> minutes
-						  <%= fbox(g,:venue,"text_field") %>
-						</div>
-                    </div>
-                    <div class="col6">
                         <%= fbox(g,[:starts_at,:class => "dateTimeField caltf "],"text_field",nil) %>
                         <%= fbox(g,[:assigned_to, 
                                  User.order(:first_name), 
@@ -56,8 +48,17 @@
                                  :first_name,
                                  {:prompt => "--User--"}],"collection_select",1,"Assign To") %>
                         <%= g.hidden_field :assigned_by, :value => current_user.id.to_s %>
+						<%= fbox(g,[:desc,:size => "2x2"],"text_area",nil,"Description") %>
+						<br/>
+						<span onclick="div_toggle(this,'#more_fields')" class="btns">more fields</span>
+						<div class="cl"></div>
+						<div class="cols" id="more_fields" style="display:none;">
+						  <%= fbox(g,[:ends_at,:class => "dateTimeField caltf"],"text_field",nil) %>
+						  <%= fbox(g,[:api,:style => "white-space:normal"],"check_box",nil,"Add to google calendar ?") %>
+						  <%= fbox(g,:remind_before,"text_field") %> minutes
+						  <%= fbox(g,:venue,"text_field") %>
+						</div>
                     </div>
-                    
                 </div>
 	<br/>
     <%= g.submit "Create",{:class => "btnp fl"} %>
