--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -15,11 +15,8 @@ $(function(){
 });
 </script>
 <br/>
-<div class="cols bltab " style="width:97%">
-<div class="col1">
-  PR
-</div>
-<div class="col11 brgl" style="padding-left:10px">
+<div class="cols boxstheme " style="width:97%">
+<div class="col11" >
   
     <div class="fields">
 	 <% @p_types.each do |i| %>
@@ -28,7 +25,7 @@ $(function(){
           &nbsp;<%= p.label i.name %>&nbsp;&nbsp;&nbsp;&nbsp;
         <% end %>
 	<div id="object_name" data-obj='<%= parent %>'>
-    </div>
+    </div><br/>
 	 <!-- array of styles corresponding to [0]course_subject_text_div, [1]course_subject, [2]application_status, [3]ins_ref_no calling the array as sty (i.e styles) -->
 	   <% if parent == "enquiry" %>
 		 <% sty = ['','none','none','display:none;'] %>
@@ -107,14 +104,15 @@ $(function(){
 	  <div class="fbox">
        <%= go_create(p,"course_subject","subject_id","name",sty[1]) %>  
 	   </div>
-		<div class="fbox">
-		<%= go_create(p,"application_status","app_status_id","name",sty[2]) %>
-		</div>
-		
 		<div class="end_date_div fbox">
               <%= label_tag :end_date %>
               <%= p.text_field :end_date,{class: 'dateField caltf '} %>
         </div>
+		<div class="fbox">
+		<%= go_create(p,"application_status","app_status_id","name",sty[2]) %>
+		</div>
+		
+		
 		
         <div class="ins_ref_no fbox" style='<%= sty[3] %>'>
              <%= fs(p,"ins_ref_no","text_field") %>
