--- a/app/views/enquiries/_preferred_countries.html.erb
+++ b/app/views/enquiries/_preferred_countries.html.erb
@@ -14,7 +14,7 @@ $(document).ready(function(){
 	  <div class="frbox">
 	  <label>Search</label>
 	  <input type="text" size="25" class="searchKey"/>
-	  <a href='#' id='deselect-all' class="btns">deselect all</a>
+	  
 	  </div>
   </div>
   
@@ -26,7 +26,9 @@ $(document).ready(function(){
                    {multiple: true,
                     size: 5,
                     include_blank: false, 
-                    id: "multiselect"}) %>
+                    id: "multiselect"}) %><br/>
+	<a href='#' id='deselect-all' class="btns fr">deselect all</a>
+	<div class="cl"></div>
 	</div>
 	</div>
   <br/>
